[project]
name = "kis-mcp-server"
version = "0.1.0"
description = "한국투자증권 REST API를 사용한 MCP(Model Context Protocol) 서버"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "migusdn", email = "migusdn@gamil.com" }
]
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0"
]
